[package]
name = "RTS-Assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7",    features = ["full"] }
hdrhistogram = "7.5"  # For accurate latency graphs (CL02)
rumqttc = "0.25.1"   
serde = { version = "1.0", features = ["derive"] }      # Optional JSON packets
serde_json = "1.0"
scheduled-thread-pool = "0.2.6"

[[bench]]
name = "OCS"
harness = false
